--- a/tests/data/nested_fail/ci/taskcat.yml
+++ b/tests/data/nested_fail/ci/taskcat.yml
@@ -1,6 +1,9 @@
 ---
 general:
-  boto_profile: test
+  profile_name: test
+  auth:
+    us-east-2:
+      profile_name: general_auth
 project:
   owner: owner@company.com
   name: nested-fail
@@ -9,5 +12,11 @@ project:
     - us-west-2
 tests:
   taskcat-json:
+    parameter_input: input.json
+    template_file: test.template.yaml
+    auth:
+      us-west-2:
+        profile_name: test_auth
+  no-auth:
     parameter_input: input.json
     template_file: test.template.yaml
